# caliber

./: .gitignore  CMakeLists.txt  LICENSE  README.md  ROADMAP.md  install.sh  uninstall.sh
graphcalc/: .gitignore  CMakeLists.txt
graphcalc/resources/themes/: dark.qss  light.qss
graphcalc/src/: main.cpp  mainwindow.cpp  mainwindow.h
graphcalc/src/core/: expression_parser.cpp  expression_parser.h  math_engine.cpp  math_engine.h
graphcalc/src/widgets/: display_widget.cpp  history_panel.h  mode_sidebar.cpp  mode_sidebar.h
package/: PKGBUILD  build_flatpak.sh  build_linux.sh  build_macos.sh  caliber.desktop  caliber.metainfo.xml  com.caliber.app.json
resources/: resources.qrc
resources/themes/: dark.qss  dracula.qss  light.qss  midnight.qss  monokai.qss  nord.qss  solarized.qss
src/: main.cpp  mainwindow.cpp  mainwindow.h
src/core/: expression_parser.cpp  expression_parser.h  history_manager.cpp  history_manager.h  math_engine.cpp  math_engine.h
src/modes/basic/: basic_widget.cpp  basic_widget.h
src/modes/conversion/: conversion_widget.cpp  conversion_widget.h  currency_api.cpp  currency_api.h  unit_converter.cpp  unit_converter.h
src/modes/date/: date_widget.cpp  date_widget.h
src/modes/equations/: equations_widget.cpp  equations_widget.h
src/modes/graphing/: function_parser.cpp  function_parser.h  graphing_widget.cpp  graphing_widget.h
src/modes/programming/: programming_widget.cpp  programming_widget.h
src/modes/scientific/: scientific_widget.cpp  scientific_widget.h
src/widgets/: display_widget.h  history_panel.cpp  history_panel.h  mode_sidebar.cpp  mode_sidebar.h
windows/: build.bat  caliber.rc  installer.nsi  make_ico.py
